2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Now run-eval is invoked with context that has only session-state.
	  So we can easily simulate login session in kahua-shell.

2007-07-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configurea.ac, cgi/Makefile.in
	  Add configure option --with-fastcgi-ext to specify extension of
	  FastCGI script.  Its default value is fcg yet.

2007-07-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.5 released.

2007-06-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: examples/lambdabooks.init, examples/foldlist/foldlist.kahua,
	          examples/lambdabooks/book.kahua, examples/lambdabooks/lambdabooks.kahua,
	          examples/lambdabooks/lister.kahua, examples/lambdabooks/login.kahua,
	          examples/lambdabooks/partner.kahua, examples/lambdabooks/review.kahua,
	          examples/lambdabooks/useradmin.kahua,
	          examples/lambdacalcul/lambdacalcul.kahua,
	          examples/lazy-nqueen/lazy-nqueen.kahua,
	          examples/login/login.kahua, examples/nqueen/nqueen.kahua,
	          examples/wiki-iki/wiki-iki.kahua, test/lambdabooks.scm,
	          test/wiki-iki.scm
	  Modernized.  Use index slot, higher-order tag functions, and change
	  character encoding of sources to UTF-8, and so on.

2007-06-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/persistence/dbi.scm, src/kahua/persistence/efs.scm,
	          src/kahua/persistence.scm
	  Improve more to keep consistency between index-caches and id-cache.

2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-user.scm
	  Add -p(preserve) option to del sub-command.  It only deactivate user
	  instead of deletion.

2007-06-19  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix&Change: src/kahua/persistence.scm, src/kahua/persistence/efs.scm,
	              src/kahua-server.scm, test/index-slots.scm,
	              test/persistence.scm
	  Improve keeping consistency between index-caches and id-cache.
