@@ -1,5 +1,8 @@
 2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/user.scm, test/user.scm
+	  Add kahua-user? that check obj is a instance (kahua-current-user-class).
+
 	* Change: src/kahua/server.scm
 	  Now run-eval is invoked with context that has only session-state.
 	  So we can easily simulate login session in kahua-shell.
